added locker room attendant options to coaches team role.  Also added alert page for managers for tournaments.

--- a/WebContent/addcoachdetails.xhtml
+++ b/WebContent/addcoachdetails.xhtml
@@ -58,7 +58,10 @@
 				    	<f:selectItem itemLabel="Student Coach" itemValue="Student Coach"/>
 				    	<f:selectItem itemLabel="Manager" itemValue="Manager"/>
 				    	<f:selectItem itemLabel="Assistant Coach/Manager" itemValue="Assistant Coach/Manager"/>
-				    	<p:ajax process="@this" listener="#{coachrosteractionBean.checkRole()}" event="change" update="@form"  />
+						<f:selectItem itemLabel="Manager/Locker Room Attendant" itemValue="Manager/Locker Room Attendant"/>
+						<f:selectItem itemLabel="Assistant Coach/Locker Room Attendant" itemValue="Assistant Coach/Locker Room Attendant"/>
+
+						<p:ajax process="@this" listener="#{coachrosteractionBean.checkRole()}" event="change" update="@form"  />
 				    </b:selectOneMenu>
 					<h:outputText value=" " />
 					<h:outputText value=" " />
