--- a/WebContent/workwithcoaches.xhtml
+++ b/WebContent/workwithcoaches.xhtml
@@ -97,6 +97,9 @@
 							<f:selectItem itemLabel="SC" itemValue="Student Coach"/>
 							<f:selectItem itemLabel="MR" itemValue="Manager"/>
 							<f:selectItem itemLabel="AM" itemValue="Assistant Coach/Manager"/>
+							<f:selectItem itemLabel="ML" itemValue="Manager/Locker Room Attendant"/>
+							<f:selectItem itemLabel="AL" itemValue="Assistant Coach/Locker Room Attendant"/>
+
 						</b:selectOneMenu>
 
 					</b:dataTableColumn>
